# costools

./: .coveragerc  .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  README.rst  RECON-INFO  azure-pipelines.yml  defsetup.py  new_setup.cfg  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: publish-to-pypi.yml  tests.yml  tests_scheduled.yml
costools/: __init__.py  add_cos_s_region.py  splittag.help  timefilter.help  timefilter.py  x1dcorr.help  x1dcorr.py
costools/pars/: splittag.cfg  splittag.cfgspc  x1dcorr.cfg  x1dcorr.cfgspc
doc/: Makefile  environment.yml  make.bat
doc/source/: conf.py  index.rst  saamodel.rst  timefilter.rst
docs/: environment.yml
docs/source/: conf.py  costoolsutil.rst  index.rst  splittag.rst  timefilter.rst  x1dcorr.rst
lib/: saamodel.py  timefilter  timefilter.py
lib/costools/: __init__.py  costoolsutil.py  saamodel.py  splittag.py  timefilter.help  timefilter.py  x1dcorr.py
lib/costools/pars/: timefilter.cfg  timefilter.cfgspc
lib/pars/: timefilter.cfg  timefilter.cfgspc
