[project]
name = "costools"
description = "Tools for COS (Cosmic Origins Spectrograph)"
authors = [
    { name = "Warren Hack" },
    { name = "Nadezhda Dencheva" },
    { name = "Phil Hodge" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "astropy",
    "calcos",
    "numpy",
    "stsci.tools",
]
dynamic = [
    "version",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE.txt"
content-type = "text/plain"

[project.scripts]
timefilter = "costools.timefilter:main"
add_cos_s_region = "costools.add_cos_s_region:call_main"

[project.optional-dependencies]
docs = [
    "sphinx",
    "numpydoc",
]
test = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = [
    "setuptools>=38.2.5",
    "setuptools_scm",
    "wheel",
    "numpy>=2.0.0b1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
costools = [
    "pars/*",
    "*.help",
]

[tool.setuptools_scm]
version_file = "costools/version.py"
