[metadata]
name = costools
# version is the *next* version to be release, with .dev at the end if it is not final 
version = 1.1.1.dev
author = Warren Hack, Nadezhda Dencheva, Phil Hodge
author-email = help@stsci.edu
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
summary = Tools for COS (Cosmic Origins Spectrograph) 
classifier = 
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.6
requires-dist = 
	stsci.tools
	calcos
	pyfits (>=3.1.1,<=3.1.99)
	numpy (>=1.5.1)

[files]
packages_root = lib
packages = costools
package_data = 
	costools = pars/* *.help
scripts = lib/costools/timefilter

[global]
commands = stsci.distutils.command.easier_install.easier_install
setup_hooks = 
	stsci.distutils.hooks.use_packages_root
	stsci.distutils.hooks.tag_svn_revision
	stsci.distutils.hooks.version_setup_hook

